add wifi configuration file and bash script

--- a/sources/meta-myir-imx6ulx/conf/machine/myd-y6ull-rhmi.conf
+++ b/sources/meta-myir-imx6ulx/conf/machine/myd-y6ull-rhmi.conf
@@ -8,12 +8,13 @@ include conf/machine/include/mys6ulx-base.inc
 include conf/machine/include/tune-cortexa7.inc
 include conf/machine/include/mys6ulx-common.inc
 
-MACHINE_FIRMWARE_append = " firmware-brcm43438a firmware-brcm43362"
+MACHINE_FIRMWARE_append = " firmware-brcm43438a"
 
 SOC_FAMILY = "mx6ul:mx6ull"
 
 KERNEL_DEVICETREE = "myd-y6ull-gpmi-weim.dtb \
     myd-y6ull-emmc.dtb \
+    myd-y6ull-gpmi-weim-exp.dtb \
 "
 
 UBOOT_CONFIG ??= "emmc nand sd"
