--- a/sources/meta-myir-imx6ulx/conf/machine/myd-y6ull14x14.conf
+++ b/sources/meta-myir-imx6ulx/conf/machine/myd-y6ull14x14.conf
@@ -12,7 +12,8 @@ MACHINE_FIRMWARE_append = " firmware-brcm43438a firmware-brcm43362"
 
 SOC_FAMILY = "mx6ul:mx6ull"
 
-KERNEL_DEVICETREE = "myd-y6ull-gpmi-weim.dtb \
+KERNEL_DEVICETREE = "    myd-y6ull-gpmi-weim.dtb \
+    myd-y6ull-gpmi-weim-witchout-exp.dtb \
     myd-y6ull-emmc.dtb \
 "
 
