--- a/sources/meta-myir-imx6ulx/conf/machine/myd-y6ul14x14.conf
+++ b/sources/meta-myir-imx6ulx/conf/machine/myd-y6ul14x14.conf
@@ -12,9 +12,11 @@ MACHINE_FIRMWARE_append = " firmware-brcm43362"
 
 SOC_FAMILY = "mx6ul"
 
-KERNEL_DEVICETREE = "myd-y6ul-gpmi-weim.dtb \
+KERNEL_DEVICETREE = "    myd-y6ul-gpmi-weim.dtb \
+    myd-y6ul-gpmi-weim-witchout-exp.dtb \
     myd-y6ul-emmc.dtb \
 "
+
 
 UBOOT_CONFIG ??= "sd emmc nand"
 UBOOT_CONFIG[sd] = "myd_y6ul_14x14_emmc_config,sd"
