--- a/sources/meta-myir-imx6ulx/recipes-kernel/linux/linux-mys6ulx-4.1.15/myd-y6ul14x14/myd_y6ulx_rhmi_witchout_exp_defconfig
+++ b/sources/meta-myir-imx6ulx/recipes-kernel/linux/linux-mys6ulx-4.1.15/myd-y6ul14x14/myd_y6ulx_rhmi_witchout_exp_defconfig
@@ -796,16 +796,10 @@ CONFIG_CAN_M_CAN=y
 # CONFIG_CAN_DEBUG_DEVICES is not set
 # CONFIG_IRDA is not set
 CONFIG_BT=y
-CONFIG_BT_BREDR=y
-CONFIG_BT_RFCOMM=m
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=m
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=m
-CONFIG_BT_LE=y
+# CONFIG_BT_BREDR is not set
+# CONFIG_BT_LE is not set
 # CONFIG_BT_SELFTEST is not set
-CONFIG_BT_DEBUGFS=y
+# CONFIG_BT_DEBUGFS is not set
 
 #
 # Bluetooth device drivers
@@ -845,11 +839,7 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_DEBUGFS is not set
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_CFG80211_WEXT=y
-CONFIG_LIB80211=y
-CONFIG_LIB80211_CRYPT_WEP=y
-CONFIG_LIB80211_CRYPT_CCMP=y
-CONFIG_LIB80211_CRYPT_TKIP=y
-# CONFIG_LIB80211_DEBUG is not set
+# CONFIG_LIB80211 is not set
 CONFIG_MAC80211=y
 CONFIG_MAC80211_HAS_RC=y
 CONFIG_MAC80211_RC_MINSTREL=y
@@ -1390,19 +1380,14 @@ CONFIG_PCMCIA_RAYCS=y
 # CONFIG_ATH_CARDS is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
-CONFIG_BCMDHD=y
-CONFIG_BCMDHD_FW_PATH="/lib/firmware/bcmd/fw_bcm43438a1_apsta.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/bcmd/nvram_ap6212a.txt"
-CONFIG_BCMDHD_SDIO=y
+# CONFIG_BCMDHD is not set
+# CONFIG_BCMDHD_SDIO is not set
 # CONFIG_BCMDHD_USB is not set
-CONFIG_BCMDHD_OOB=y
+# CONFIG_BCMDHD_OOB is not set
 # CONFIG_BCMDHD_SDIO_IRQ is not set
 # CONFIG_BRCMSMAC is not set
 # CONFIG_BRCMFMAC is not set
-CONFIG_HOSTAP=y
-CONFIG_HOSTAP_FIRMWARE=y
-CONFIG_HOSTAP_FIRMWARE_NVRAM=y
-CONFIG_HOSTAP_CS=y
+# CONFIG_HOSTAP is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_HERMES is not set
 # CONFIG_P54_COMMON is not set
