add machine for rhmi

--- a/sources/meta-myir-imx6ulx/conf/machine/myd-y6ul-rhmi.conf
+++ b/sources/meta-myir-imx6ulx/conf/machine/myd-y6ul-rhmi.conf
@@ -13,6 +13,7 @@ MACHINE_FIRMWARE_append = " firmware-brcm43362"
 SOC_FAMILY = "mx6ul"
 
 KERNEL_DEVICETREE = "    myd-y6ul-gpmi-weim.dtb \
+    myd-y6ul-gpmi-weim-witchout-exp.dtb \
     myd-y6ul-emmc.dtb \
 "
 
