--- a/sources/meta-myir-imx6ulx/conf/machine/myd-y6ull-hmi.conf
+++ b/sources/meta-myir-imx6ulx/conf/machine/myd-y6ull-hmi.conf
@@ -15,6 +15,7 @@ SOC_FAMILY = "mx6ul:mx6ull"
 KERNEL_DEVICETREE = "myd-y6ull-gpmi-weim.dtb \
     myd-y6ull-emmc.dtb \
     myd-y6ull-gpmi-weim-without-exp.dtb \
+    myd-y6ull-emmc-without-exp.dtb \
 "
 
 UBOOT_CONFIG ??= "emmc nand sd"
