add swupdte function

--- a/sources/meta-myir-imx6ulx/conf/layer.conf
+++ b/sources/meta-myir-imx6ulx/conf/layer.conf
@@ -9,3 +9,4 @@ BBFILE_COLLECTIONS += "myir-imx6ulx"
 BBFILE_PATTERN_myir-imx6ulx = "^${LAYERDIR}/"
 BBFILE_PRIORITY_myir-imx6ulx = "8"
 
+LAYERDEPENDS_myir-imx6ul-yocto += "swupdate"
